# hierarchical-context-compressor

./: .gitignore  AGENTS.md  README.md  agents.md  pyproject.toml  requirements.txt
.github/workflows/: generate-context.yml  hcc-template-for-other-repos.yml.example
src/: __init__.py  analyzer.py  crawler.py  formatter.py  main.py  tree.py
tests/: test_crawler_analyzer_formatter.py  test_formatter.py  test_main_llm_integration.py  test_tree.py
