[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierarchical-context-compressor"
version = "0.1.0"
description = "CLI and GitHub Action to generate AI-optimized hierarchical context maps (llms.txt + agents.md) for any repo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hcc = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]
